Fixing right-side overflow issue

--- a/styles/output.css
+++ b/styles/output.css
@@ -3,6 +3,10 @@ html {
   font-size: 16px;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 *,
 *:before,
 *:after {
